--- a/xbmc/filesystem/CMakeLists.txt
+++ b/xbmc/filesystem/CMakeLists.txt
@@ -29,6 +29,7 @@ set(SOURCES AddonsDirectory.cpp
             ISO9660Directory.cpp
             ISOFile.cpp
             LibraryDirectory.cpp
+            MediaFile.cpp
             MultiPathDirectory.cpp
             MultiPathFile.cpp
             MusicDatabaseDirectory.cpp
@@ -105,6 +106,7 @@ set(HEADERS AddonsDirectory.h
             ISOFile.h
             iso9660.h
             LibraryDirectory.h
+            MediaFile.h
             MultiPathDirectory.h
             MultiPathFile.h
             MusicDatabaseDirectory.h
