--- a/xbmc/cores/RetroPlayer/CMakeLists.txt
+++ b/xbmc/cores/RetroPlayer/CMakeLists.txt
@@ -2,6 +2,7 @@ set(SOURCES PixelConverter.cpp
             RetroPlayer.cpp
             RetroPlayerAudio.cpp
             RetroPlayerAutoSave.cpp
+            RetroPlayerClock.cpp
             RetroPlayerInput.cpp
             RetroPlayerVideo.cpp)
 
@@ -10,6 +11,7 @@ set(HEADERS IPixelConverter.h
             RetroPlayer.h
             RetroPlayerAudio.h
             RetroPlayerAutoSave.h
+            RetroPlayerClock.h
             RetroPlayerDefines.h
             RetroPlayerInput.h
             RetroPlayerVideo.h)
