Work-in-progress

--- a/xbmc/cores/RetroPlayer/playback/CMakeLists.txt
+++ b/xbmc/cores/RetroPlayer/playback/CMakeLists.txt
@@ -1,8 +1,8 @@
-set(SOURCES NetworkPlayback.cpp
-            ReversiblePlayback.cpp)
+set(SOURCES ReversiblePlayback.cpp)
 
-set(HEADERS IPlayback.h
-            NetworkPlayback.h
+set(HEADERS IFramePlayback.h
+            ITimePlayback.h
+            RealtimePlayback.h
             ReversiblePlayback.h)
 
 core_add_library(retroplayer_playback)
