--- a/xbmc/games/controllers/CMakeLists.txt
+++ b/xbmc/games/controllers/CMakeLists.txt
@@ -2,6 +2,7 @@ set(SOURCES Controller.cpp
             ControllerFeature.cpp
             ControllerLayout.cpp
             ControllerManager.cpp
+            ControllerTopology.cpp
             ControllerTranslator.cpp)
 
 set(HEADERS Controller.h
@@ -9,6 +10,7 @@ set(HEADERS Controller.h
             ControllerFeature.h
             ControllerLayout.h
             ControllerManager.h
+            ControllerTopology.h
             ControllerTranslator.h
             ControllerTypes.h)
 
