--- a/xbmc/games/players/CMakeLists.txt
+++ b/xbmc/games/players/CMakeLists.txt
@@ -1,5 +1,9 @@
-set(SOURCES Player.cpp)
+set(SOURCES GamePlayer.cpp
+            PlayerManager.cpp
+)
 
-set(HEADERS Player.h)
+set(HEADERS GamePlayer.h
+            PlayerManager.h
+)
 
 core_add_library(games_players)
